--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node app"
   },
+  "engines":{
+    "node":"0.8.x"
+  },
   "dependencies": {
     "express": "3.1.0",
     "consolidate":"*",
