--- a/gu-s/Web.config
+++ b/gu-s/Web.config
@@ -12,6 +12,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DatabaseName" value="gu-s"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
